# main_service/core/main.go
@@ -6,7 +6,8 @@ import (
 	"main_service_core/controllers"
 	"main_service_core/db_utils"
 	"main_service_core/middlewares"
-	post_pb "main_service_core/proto/post"
+	post_pb "main_service_core/post"
+	"main_service_core/reaction"
 	"main_service_core/utils"
 
 	"github.com/gin-gonic/gin"
@@ -24,6 +25,11 @@ func main() {
 		log.Fatal(err)
 	}
 
+	err = reaction.Connect()
+	if err != nil {
+		log.Fatal(err)
+	}
+
 	r := gin.Default()
 	r.POST("/api/v1/user/sign-up", controllers.SignUp)
 	r.POST("/api/v1/user/sign-in", controllers.SignIn)
@@ -35,7 +41,9 @@ func main() {
 	authed.PUT("/api/v1/post/:id", controllers.UpdatePost)
 	authed.DELETE("/api/v1/post/:id", controllers.DeletePost)
 	authed.GET("/api/v1/post/:id", controllers.GetPostById)
-	authed.POST("/api/v1/post/pagination", controllers.GetPostPagination)
+	authed.GET("/api/v1/pagination/:author_id/:offset/:limit", controllers.GetPostPagination)
+	authed.POST("/api/v1/post/view/:id", controllers.PostView)
+	authed.POST("/api/v1/post/like/:id", controllers.PostLike)
 
 	listening_line := fmt.Sprintf(":%s", utils.GetenvSafe("MAIN_SERVICE_PORT"))
 	log.Printf("listening at %s\n", listening_line)
